2.70 *** MAJOR CHANGES ***
  - switch to standard Maven toolchains.xml for cross-compilation, #169.
    See https://maven.apache.org/guides/mini/guide-using-toolchains.html
    for instructions on how to use it.
  - Correctly handle semicolons and inline comments in SQL statements.
    Existing SQL statements may break due to lexer changes, ensure you have
    test coverage.
  - Introduce "column mappers" which dramatically improve type handling
    for BeanMapper-style automatic mapping
      see https://github.com/jdbi/jdbi/pull/164
  - Disallow "nested" transactions explicitly.  They almost certainly don't
    work the way you expect.  Use savepoints instead.
  - Eagerly check return type of @SqlUpdate annotated SqlObject methods
  - Allow getting generated keys by name for Oracle
  - Allow getting generated keys from prepared Batch statements
  - Cache StatementRewriter parsing of statements

2.63
  - Include lambda-friendly callback methods on Handle and DBI, #156

2.62
  - Also include asm in shade, fixes build.  Sorry about the broken releases...

2.61 *** DO NOT USE ***
  - Fix shading broken in 2.60, fixes #152

2.60 *** DO NOT USE ***
  - Fix Javadoc generation for JDK6 and JDK8
  - Add support for /* */ style comments in statements
  - Add @BindMap annotation which allows parameters passed in a Map<String, Object>
  - Add support for running Script objects as individual statements rather than batch
  - Add support for default bind name based on argument position number (thanks @arteam)
  - Fix SqlObject connection leak through result iterator (thanks @pierre)
  - Switch to using cglib instead of cglib-nodep so we can pull ASM 5.0.2 which is Java 8 compatible
  - Classmate to 1.1.0

2.59
  - Fixes #137, broken ClasspathStatementLocator cache (thanks @HiJon89).
  - Recognize MySQL REPLACE statements

2.58
  - Identical to 2.57 except that the jar is correctly shaded.

